--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,8 @@
   </head>
   <body>
     {{>header}}
-    <img src="/img/JbHRIi.jpg" class="portrait">
+    <p>This site was created by Vivek Kumar Singh. It uses data from mapbox.com and weatherstack.com!</p>
+    <img src="/img/JbHRIi.jpg" class=" portrait">
     {{>footer}}
   </body>
 </html>
